2012-07-22  Peter Bloomfield

	* src/balsa-index.c (pipe_out_watch): reduce scope of variable.

2012-07-22  Peter Bloomfield

	* libinit_balsa/assistant_page_directory.c
	(unconditional_mailbox): reduce scope of variable.

2012-07-22  Peter Bloomfield

	* libbalsa/send.c (balsa_send_message_real): suppress memory
	leak warning.

2012-07-22  Peter Bloomfield

	* libbalsa/message.c (prepend_header_misc): check loop index
	value before using it.

2012-07-22  Peter Bloomfield

	* libbalsa/mailbox_pop3.c (mp_load_uids): reduce scope of
	variable.

2012-07-22  Peter Bloomfield

	* libbalsa/mailbox_mh.c (lbm_mh_parse_mailbox),
	(lbm_mh_handle_seq_line), (lbm_mh_check): use sscanf field
	limits.

2012-07-22  Peter Bloomfield

	* libbalsa/mailbox_mbox.c (lbm_mbox_stream_seek_to_message):
	avoid unread variable error.

2012-07-22  Peter Bloomfield

	* libbalsa/mailbox_imap.c (is_child_of), (create_cache_copy),
	(libbalsa_mailbox_imap_sort): reduce scope of variables.

2012-07-22  Peter Bloomfield

	* libbalsa/mailbox.c (libbalsa_mailbox_type_from_path): reduce
	scope of variable.

2012-07-22  Peter Bloomfield

	* libbalsa/libbalsa.c (libbalsa_guess_mail_spool),
	(asn1time_to_string), (x509_get_part): reduce scope of
	variables;
	(libbalsa_get_image_from_x_face_header): use sscanf field limit.

2012-07-22  Peter Bloomfield

	* libbalsa/imap/siobuf.c (sio_set_tlsclient_ssl),
	(sio_set_tlsserver_ssl), (raw_read): reduce scope of variables.

2012-07-22  Peter Bloomfield

	* libbalsa/imap/pop3.c (parse_list_response): use sscanf field
	limits.

2012-07-22  Peter Bloomfield

	* libbalsa/imap/imap_tst.c (get_user), (user_cb): reduce scope
	of variables.

2012-07-22  Peter Bloomfield

	* libbalsa/imap/imap_search.c (imap_search_key_new_string),
	(imap_search_exec_unlocked): reduce scope of variables.

2012-07-22  Peter Bloomfield

	* libbalsa/imap/imap-tls.c (imap_check_server_identity): reduce
	scope of variable.

2012-07-22  Peter Bloomfield
